lay out document structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-I want pizza please agai
+<!doctype html>
+<html>
+  <head>
+    <title>This is my document title</title>
+  </head>
+  <body>
+
+
+  </body>
