--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <title>This is my document title</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="http://www.google.com">Contacts</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+    <h1> This is my first ever headline</h1>
+    <h2> This is my first ever subtitle</h2>
+    <p> Why do I have to learn these things?
+      Can I just think it and have it appear as a wesite on the web?
+      Maybe I can! Lemme try #FocusTime</p>
+    </section>
 
 
   </body>
