--- a/story.html
+++ b/story.html
@@ -10,8 +10,8 @@
   <h2>
     Chapter 1
   </h2>
-  <p1>
-    <href="Molly"> had been staring out of her window for about 
+  <p1 href="Molly">
+    had been staring out of her window for about
     an hour now. On her desk, lying between the copies
     of Nature, New Scientist, and all the other scientific
     journals her work had appeared in, was a well thumbed
