testing the highlithing feature again

--- a/story.html
+++ b/story.html
@@ -10,15 +10,16 @@
   <h2>
     Chapter 1
   </h2>
-  <p1 href="Molly">
-    had been staring out of her window for about
+  <p1>
+    <a href="https://developer.mozilla.org">MDN</a>Molly had been staring out of her window for about
     an hour now. On her desk, lying between the copies
     of Nature, New Scientist, and all the other scientific
     journals her work had appeared in, was a well thumbed
     copy of On The Road. It had been Molly's favourite book
     since college, and the longer she spent in these four walls
     the more she felt she needed to be free.
-
+  </p1>
+  <p2>
     She had spent the last ten years in this room,
     sitting under a poster with an Oscar Wilde quote
     proclaiming that Work is the refuge of people who
@@ -26,4 +27,4 @@
     her pioneering work, unraveling the secrets of the
     llama DNA, to be an outstanding achievement, Molly
     did think she had something better to do.
-  </p1>
+  </p2>
