--- a/story.html
+++ b/story.html
@@ -11,7 +11,7 @@
     Chapter 1
   </h2>
   <p1>
-    <a href="https://developer.mozilla.org">MDN</a>Molly had been staring out of her window for about
+    <a href="file:///Users/hermanchenwi/betamore/project/index.html">Molly</a> had been staring out of her window for about
     an hour now. On her desk, lying between the copies
     of Nature, New Scientist, and all the other scientific
     journals her work had appeared in, was a well thumbed
@@ -21,10 +21,20 @@
   </p1>
   <p2>
     She had spent the last ten years in this room,
-    sitting under a poster with an Oscar Wilde quote
+    sitting under a poster with an <a href="https://en.wikipedia.org/wiki/Oscar_Wilde">Oscar Wilde</a> quote
     proclaiming that Work is the refuge of people who
     have nothing better to do. Although many considered
     her pioneering work, unraveling the secrets of the
     llama DNA, to be an outstanding achievement, Molly
     did think she had something better to do.
   </p2>
+  <h3>
+    Ordered List
+  </h3>
+    <ol>
+      <li>Chop potatoes into quarters</li>
+      <li>Simmer in salted water for 15-20 minutes until tender</li>
+      <li>Heat milk, butter and nutmeg</li>
+      <li>Drain potatoes and mash</li>
+      <li>Mix in the milk mixture</li>
+    </ol>
