--- a/story.html
+++ b/story.html
@@ -38,3 +38,28 @@
       <li>Drain potatoes and mash</li>
       <li>Mix in the milk mixture</li>
     </ol>
+<p3>
+  A paragraph consists of one or more sentences that
+  form a self-contained unit of discourse. The start
+  of a paragraph is indicated by a new line.
+</p3>
+<p4>
+  Text is easier to understand when it is split up
+  into units of text. For example, a book may have
+  chapters. Chapters can have subheadings. Under
+  each heading there will be one or more paragraphs.
+</p4>
+<h4>
+  Unordered List
+</h4>
+<ul>
+  <li>Mouses</li>
+  <li>Pastries</li>
+    <ul>
+      <li>Croissant</li>
+      <li>Mille-feuille</li>
+      <li>Palmier</li>
+      <li>Profiterole</li>
+    </ul>
+  <li>Tarts</li>
+</ul>
