finishing the last paragraph and inseritng a blockquote

--- a/story.html
+++ b/story.html
@@ -63,3 +63,12 @@
     </ul>
   <li>Tarts</li>
 </ul>
+<h2>
+  Blockquote
+</h2>
+  <p5>
+    <blockquote cite="Mignon McLaughlin">
+    The only courage that matters is the kind that gets
+    you from one moment to the next.
+  </blockquote>
+</p5>
