--- a/story.html
+++ b/story.html
@@ -71,4 +71,7 @@
     The only courage that matters is the kind that gets
     you from one moment to the next.
   </blockquote>
+  <footer>
+    <cite>Mignon McLaughlin</cite>
+  </footer>
 </p5>
