fixing the blockquote

--- a/story.html
+++ b/story.html
@@ -66,12 +66,12 @@
 <h2>
   Blockquote
 </h2>
-  <p5>
-    <blockquote cite="Mignon McLaughlin">
+  <blockquote cite="http://www.brainyquote.com/quotes/quotes/m/mignonmcla161632.html">
+    <p5>
     The only courage that matters is the kind that gets
     you from one moment to the next.
-  </blockquote>
+    </p5>
     <footer>
-      <cite>--Mignon McLaughlin</cite>
+      --Mignon McLaughlin
     </footer>
-</p5>
+ </blockquote>
