italicising the name Mignon McLaughlin

--- a/story.html
+++ b/story.html
@@ -72,6 +72,6 @@
     you from one moment to the next.
     </p5>
     <footer>
-      --Mignon McLaughlin
+      <i>--Mignon McLaughlin</i>
     </footer>
  </blockquote>
