changing the image i had

--- a/story.html
+++ b/story.html
@@ -15,7 +15,7 @@
     an hour now. On her desk, lying between the copies
     of Nature, New Scientist, and all the other scientific
     journals her work had appeared in, was a well thumbed
-    <img scr="https://www.google.com/imgres?imgurl=http%3A%2F%2F3.bp.blogspot.com%2F-25SRlbfdUBk%2FUWO7ttxFUqI%2FAAAAAAAAg44%2FIbzUFICyEjY%2Fs1600%2Ftyga-molly-ft-wiz-khalifa-mally-mall-music-video.jpg&imgrefurl=http%3A%2F%2Fwww.djcosthekid.com%2F2013%2F04%2Ftyga-molly-music-video.html&docid=FwxrAKsq0fEH1M&tbnid=hxvDH-r-ypVlbM%3A&w=640&h=360&client=safari&bih=648&biw=1280&ved=0ahUKEwjx4-v0qsfPAhVFSSYKHWowD5wQMwhqKDgwOA&iact=mrc&uact=8">
+    <img scr="https://unsplash.com/?photo=3OiYMgDKJ6k"/>
     copy of On The Road. It had been Molly's favourite book
     since college, and the longer she spent in these four walls
     the more she felt she needed to be free.
