--- a/story.html
+++ b/story.html
@@ -15,11 +15,12 @@
     an hour now. On her desk, lying between the copies
     of Nature, New Scientist, and all the other scientific
     journals her work had appeared in, was a well thumbed
-    <img scr="https://unsplash.com/?photo=PiPZ2DHa3rE" alt="Friends Enjoying Water" style="width:304px;height:228px;"/>
     copy of On The Road. It had been Molly's favourite book
     since college, and the longer she spent in these four walls
     the more she felt she needed to be free.
+    <img scr="https://images.unsplash.com/photo-1474925558543-e7a5f06e733e?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb" alt="Friends Enjoying Water" style="width:304px;height:228px;"/>
   </p1>
+
   <p2>
     She had spent the last ten years in this room,
     sitting under a poster with an <a href="https://en.wikipedia.org/wiki/Oscar_Wilde">Oscar Wilde</a> quote
