fixing the footer. Taking out the italics

--- a/story.html
+++ b/story.html
@@ -68,12 +68,12 @@
 <h2>
   Blockquote
 </h2>
-<blockquote cite="http://www.brainyquote.com/quotes/quotes/m/mignonmcla161632.html">
+<blockquote>
   <p>
     The only courage that matters is the kind that gets
     you from one moment to the next.
   </p>
     <footer>
-      <i>--Mignon McLaughlin</i>
+      <cite>--Mignon McLaughlin</cite>
     </footer>
  </blockquote>
