changing the image url

--- a/story.html
+++ b/story.html
@@ -19,7 +19,7 @@
     copy of On The Road. It had been Molly's favourite book
     since college, and the longer she spent in these four walls
     the more she felt she needed to be free.
-    <img scr="https://images.unsplash.com/photo-1474925558543-e7a5f06e733e?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb" alt="Friends Enjoying Water"/>
+    <img scr="unsplash.jpg" alt="Friends Enjoying Water"/>
   </p>
 
   <p>
