--- a/story.html
+++ b/story.html
@@ -19,7 +19,7 @@
     copy of On The Road. It had been Molly's favourite book
     since college, and the longer she spent in these four walls
     the more she felt she needed to be free.
-    <img scr="unsplash.jpg" alt="Friends Enjoying Water"/>
+    <img scr="images/unsplash.jpg" alt="Friends Enjoying Water"/>
   </p>
 
   <p>
@@ -30,6 +30,8 @@
     her pioneering work, unraveling the secrets of the
     llama DNA, to be an outstanding achievement, Molly
     did think she had something better to do.
+
+
   </p>
 <h2>
     Ordered List
